--- a/node99.html
+++ b/node99.html
@@ -665,7 +665,7 @@ the method declaration of our test specify a parameter named <code>done</code>.
 
 <FONT COLOR="#ff0000"> Mocha will know that it should wait for completion</FONT>.
 </LI>
-<LI>Mocha will wait until <code>done</code> is called or until some time limit is reached
+<LI>Mocha will wait until <code>done</code> is called or until some time limit is exceeded
 </LI>
 <LI><code>done</code>
 is a callback that we can call anywhere to indicate the test is
