--- a/node99.html
+++ b/node99.html
@@ -1112,7 +1112,7 @@ module.exports =
 
 <UL>
 <LI><code>req.params</code> is an object containing properties mapped to the 
-<A NAME="11826"></A><SPAN  CLASS="textbf">named route parameters</SPAN>. 
+<A NAME="11828"></A><SPAN  CLASS="textbf">named route parameters</SPAN>. 
 </LI>
 <LI>For example, if you have the route <code>/user/:name</code>, then the <code>name</code> property is available as 
 <code>req.params.name</code> 
@@ -1128,6 +1128,16 @@ req.params.name
 </LI>
 <LI>When you use a regular expression for the route definition, capture groups are provided in the array using 
 <code>req.params[n]</code>, where <code>n</code> is the nth capture group. 
+
+<P>
+For example:
+<PRE>
+router.get(/^\/commits\/(\w+)(?:\.\.(\w+))?$/, function(req, res){
+  var from = req.params[0];
+  var to = req.params[1] || 'HEAD';
+  res.send('commit range ' + from + '..' + to);
+});
+</PRE>
 </LI>
 <LI>This rule is applied to unnamed wild card
 matches with string routes such as <code>/file/*</code>:
