--- a/node100.html
+++ b/node100.html
@@ -119,11 +119,11 @@ Introducción</A>
 </H2>
 
 <UL>
-<LI>MongoDB (from humongous) is one of many cross-platform document-oriented databases.
+<LI>MongoDB (from humongous: huge; enormous) is one of many cross-platform document-oriented databases.
 </LI>
-<LI>Classified as a NoSQL database, 
+<LI>Is classified as a NoSQL database, 
 </LI>
-<LI>MongoDB eschews the traditional table-based relational database structure in favor of JSON-like documents with dynamic schemas (MongoDB calls the format BSON.
+<LI>MongoDB eschews the traditional table-based relational database structure in favor of JSON-like documents with dynamic schemas (MongoDB calls the format BSON)
 </LI>
 </UL>
 
