--- a/node104.html
+++ b/node104.html
@@ -28,16 +28,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html3041"
+<A NAME="tex2html3043"
   HREF="node105.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3037"
+<A NAME="tex2html3039"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3031"
+<A NAME="tex2html3033"
   HREF="node103.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3039"
+<A NAME="tex2html3041"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -77,14 +77,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3042"
+<B> Sig:</B> <A NAME="tex2html3044"
   HREF="node105.html">Bibliograf&#237;a</A>
-<B>Sup:</B> <A NAME="tex2html3038"
+<B>Sup:</B> <A NAME="tex2html3040"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html3032"
+<B> Ant:</B> <A NAME="tex2html3034"
   HREF="node103.html">&#205;ndice de Tablas</A>
 <B> Con:</B> 
-<A NAME="tex2html3039"
+<A NAME="tex2html3041"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <BR> <P>
@@ -220,6 +220,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DD><A HREF="node13.html#4182">favicons y shortcut icons</A>
 <DT><STRONG>Favorite icon</STRONG>
 <DD><A HREF="node13.html#4184">favicons y shortcut icons</A>
+<DT><STRONG>foreign key</STRONG>
+<DD><A HREF="node100.html#11847">Document Oriented Database</A>
 <DT><STRONG>función de aridad</STRONG>
 <DD><A HREF="node72.html#9882">Alfabeto con Aridad o</A>
 <DT><STRONG>función de transición del autómata</STRONG>
@@ -267,7 +269,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>lenguaje árbol homogéneo</STRONG>
 <DD><A HREF="node72.html#9888">Lenguaje de los Arboles</A>
 <DT><STRONG>listeners</STRONG>
-<DD><A HREF="node98.html#11740">Porting to Coffeescript</A>
+<DD><A HREF="node98.html#11747">Porting to Coffeescript</A>
 <DT><STRONG>local storage</STRONG>
 <DD><A HREF="node11.html#3640">Local Storage (HTML5 Web</A>
 <DT><STRONG>LR</STRONG>
@@ -284,7 +286,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Mocha TDD interface</STRONG>
 <DD><A HREF="node87.html#11077">TDD</A>
 <DT><STRONG>named route parameters</STRONG>
-<DD><A HREF="node99.html#11832">Viewing a Single Post</A>
+<DD><A HREF="node99.html#11839">Viewing a Single Post</A>
 <DT><STRONG>NFA</STRONG>
 <DD><A HREF="node50.html#7568">Conceptos Básicos del Análisis</A>
 <DT><STRONG>normalización del árbol</STRONG>
@@ -395,7 +397,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>S-atribuída</STRONG>
 <DD><A HREF="node62.html#8931">Definición Dirigida por la</A>
 <DT><STRONG>Scaffolding</STRONG>
-<DD><A HREF="node97.html#11699">Express generator</A>
+<DD><A HREF="node97.html#11706">Express generator</A>
 <DT><STRONG>selección de código</STRONG>
 <DD><A HREF="node73.html#9916">Selección de Código y</A>
 <DT><STRONG>selector</STRONG>
@@ -450,16 +452,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html3041"
+<A NAME="tex2html3043"
   HREF="node105.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html3037"
+<A NAME="tex2html3039"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html3031"
+<A NAME="tex2html3033"
   HREF="node103.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html3039"
+<A NAME="tex2html3041"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>  <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -499,11 +501,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html3042"
+<B> Sig:</B> <A NAME="tex2html3044"
   HREF="node105.html">Bibliograf&#237;a</A>
-<B>Sup:</B> <A NAME="tex2html3038"
+<B>Sup:</B> <A NAME="tex2html3040"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html3032"
+<B> Ant:</B> <A NAME="tex2html3034"
   HREF="node103.html">&#205;ndice de Tablas</A>
 </DIV>
 <!--End of Navigation Panel-->
