--- a/node96.html
+++ b/node96.html
@@ -190,7 +190,11 @@ James carr blog and updated 2015:
 <UL>
 <LI><A NAME="tex2html2761"
   HREF="node100.html#SECTION06241000000000000000">Introducción</A>
+<UL>
 <LI><A NAME="tex2html2762"
+  HREF="node100.html#SECTION06241010000000000000">Document Oriented Database</A>
+</UL>
+<LI><A NAME="tex2html2763"
   HREF="node100.html#SECTION06242000000000000000">Getting Started with MongoDB</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
