--- a/node100.html
+++ b/node100.html
@@ -168,7 +168,7 @@ for searching and defines indexes on them.
 <LI>A key concept in the relational
 design is that any data that may be repeated is placed in its own table,
 and if these instances are related to each other, a field is selected
-to group them together, the <A NAME="11854"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
+to group them together, the <A NAME="11856"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
 
 <P>
 </LI>
@@ -188,14 +188,14 @@ while the <code>PHONE_NUMBER</code> table might include <code>COUNTRY_CODE</code
 <P>
 </LI>
 <LI>The <code>PHONE_NUMBER</code> table also
-contains a <A NAME="11856"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
+contains a <A NAME="11858"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
 number assigned to the contact when it was created. 
 
 <P>
 </LI>
 <LI>In order to recreate
 the original contact, the system has to search through all of the tables
-and collect the information back together using <A NAME="11858"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html421"
+and collect the information back together using <A NAME="11860"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html421"
   HREF="footnode.html#foot11684"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>
 </LI>
 </UL>
@@ -203,15 +203,17 @@ and collect the information back together using <A NAME="11858"></A><SPAN  CLASS
 <P>
 
 <UL>
-<LI>In contrast, in a document-oriented database there may be no internal
+<LI>In contrast, in a 
+<FONT COLOR="#ff0000"> document-oriented database</FONT> there may be no internal
 structure that maps directly onto the concept of a table, and the fields
 and relations generally don't exist as predefined concepts.
 
 <P>
 </LI>
-<LI>Instead, all
+<LI>Instead, 
+<FONT COLOR="#0000ff"> all
 of the data for an object is placed in a single document, and stored in
-the database as a single entry 
+the database as a single entry</FONT>
 </LI>
 <LI>In the address book example, the document
 would contain the contact's name, image and any contact info, all in a
