--- a/node96.html
+++ b/node96.html
@@ -192,9 +192,13 @@ James carr blog and updated 2015:
   HREF="node100.html#SECTION06241000000000000000">Introducción</A>
 <UL>
 <LI><A NAME="tex2html2765"
-  HREF="node100.html#SECTION06241010000000000000">Document Oriented Database</A>
-</UL>
+  HREF="node100.html#SECTION06241010000000000000">NoSQL</A>
 <LI><A NAME="tex2html2766"
+  HREF="node100.html#SECTION06241020000000000000">Relational  Database</A>
+<LI><A NAME="tex2html2767"
+  HREF="node100.html#SECTION06241030000000000000">Document Oriented DataBase</A>
+</UL>
+<LI><A NAME="tex2html2768"
   HREF="node100.html#SECTION06242000000000000000">Getting Started with MongoDB</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
