--- a/node100.html
+++ b/node100.html
@@ -27,19 +27,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2847"
+<A NAME="tex2html2849"
   HREF="node101.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2841"
+<A NAME="tex2html2843"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2837"
+<A NAME="tex2html2839"
   HREF="node99.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2843"
+<A NAME="tex2html2845"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2845"
+<A NAME="tex2html2847"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -79,18 +79,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2848"
+<B> Sig:</B> <A NAME="tex2html2850"
   HREF="node101.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2842"
+<B>Sup:</B> <A NAME="tex2html2844"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2838"
+<B> Ant:</B> <A NAME="tex2html2840"
   HREF="node99.html">Pruebas</A>
 <B> Con:</B> 
-<A NAME="tex2html2843"
+<A NAME="tex2html2845"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2845"
+<A NAME="tex2html2847"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -100,14 +100,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html2849"
+<LI><A NAME="tex2html2851"
   HREF="node100.html#SECTION06241000000000000000">Introducción</A>
 <UL>
-<LI><A NAME="tex2html2850"
-  HREF="node100.html#SECTION06241010000000000000">Document Oriented Database</A>
+<LI><A NAME="tex2html2852"
+  HREF="node100.html#SECTION06241010000000000000">NoSQL</A>
+<LI><A NAME="tex2html2853"
+  HREF="node100.html#SECTION06241020000000000000">Relational  Database</A>
+<LI><A NAME="tex2html2854"
+  HREF="node100.html#SECTION06241030000000000000">Document Oriented DataBase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2851"
+<LI><A NAME="tex2html2855"
   HREF="node100.html#SECTION06242000000000000000">Getting Started with MongoDB</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -139,7 +143,37 @@ Introducción</A>
 <P>
 
 <H4><A NAME="SECTION06241010000000000000">
-Document Oriented Database</A>
+NoSQL</A>
+</H4>
+  
+
+<P>
+
+<UL>
+<LI>A NoSQL (often interpreted as Not only SQL) database provides a mechanism for storage and retrieval of data that is modeled in means other than the tabular relations used in relational
+databases
+</LI>
+<LI>Motivations for this approach include simplicity of design, horizontal scaling, and finer control over availability
+</LI>
+<LI>The data structures used by NoSQL databases (e.g. key-value, graph, or
+document) differ from those used in relational databases, making some operations faster in NoSQL and others faster in relational databases
+</LI>
+<LI>The particular suitability of a given NoSQL database depends
+on the problem it must solve
+</LI>
+<LI>NoSQL databases are increasingly used in big data and real-time web applications 
+</LI>
+<LI>NoSQL systems are also called "Not only SQL" to emphasize that they may also support SQL-like query languages
+</LI>
+<LI>Many
+NoSQL stores compromise consistency (in the sense of the CAP theorem) in favor of availability and partition tolerance.
+</LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION06241020000000000000">
+Relational  Database</A>
 </H4>
   
 
@@ -168,7 +202,7 @@ for searching and defines indexes on them.
 <LI>A key concept in the relational
 design is that any data that may be repeated is placed in its own table,
 and if these instances are related to each other, a field is selected
-to group them together, the <A NAME="11856"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
+to group them together, the <A NAME="11866"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
 
 <P>
 </LI>
@@ -188,19 +222,24 @@ while the <code>PHONE_NUMBER</code> table might include <code>COUNTRY_CODE</code
 <P>
 </LI>
 <LI>The <code>PHONE_NUMBER</code> table also
-contains a <A NAME="11858"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
+contains a <A NAME="11868"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
 number assigned to the contact when it was created. 
 
 <P>
 </LI>
 <LI>In order to recreate
 the original contact, the system has to search through all of the tables
-and collect the information back together using <A NAME="11860"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html421"
-  HREF="footnode.html#foot11684"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>
+and collect the information back together using <A NAME="11870"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html421"
+  HREF="footnode.html#foot11687"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>
 </LI>
 </UL>
 
 <P>
+
+<H4><A NAME="SECTION06241030000000000000">
+Document Oriented DataBase</A>
+</H4>
+  
 
 <UL>
 <LI>In contrast, in a 
@@ -216,8 +255,9 @@ of the data for an object is placed in a single document, and stored in
 the database as a single entry</FONT>
 </LI>
 <LI>In the address book example, the document
-would contain the contact's name, image and any contact info, all in a
-single record.
+would contain the contact's name, image and any contact info, 
+<FONT COLOR="#0000ff"> all in a
+single record</FONT>
 
 <P>
 </LI>
@@ -229,7 +269,8 @@ data, all of this is returned in a single object.
 <P>
 </LI>
 <LI>A key difference between the document-oriented and relational models is
-that the data formats are not predefined in the document case
+that 
+<FONT COLOR="#0000ff"> the data formats are not predefined in the document case</FONT>
 </LI>
 <LI>In most
 cases, any sort of document can be stored in any database, and those
@@ -393,19 +434,19 @@ At any point, you can access help for the mongo shell using
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2847"
+<A NAME="tex2html2849"
   HREF="node101.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2841"
+<A NAME="tex2html2843"
   HREF="node96.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2837"
+<A NAME="tex2html2839"
   HREF="node99.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2843"
+<A NAME="tex2html2845"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2845"
+<A NAME="tex2html2847"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -445,11 +486,11 @@ At any point, you can access help for the mongo shell using
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2848"
+<B> Sig:</B> <A NAME="tex2html2850"
   HREF="node101.html">&#205;ndice General</A>
-<B>Sup:</B> <A NAME="tex2html2842"
+<B>Sup:</B> <A NAME="tex2html2844"
   HREF="node96.html">CoffeeScript y Express</A>
-<B> Ant:</B> <A NAME="tex2html2838"
+<B> Ant:</B> <A NAME="tex2html2840"
   HREF="node99.html">Pruebas</A>
 </DIV>
 <!--End of Navigation Panel-->
