--- a/node100.html
+++ b/node100.html
@@ -150,8 +150,9 @@ NoSQL</A>
 <P>
 
 <UL>
-<LI>A NoSQL (often interpreted as Not only SQL) database provides a mechanism for storage and retrieval of data that is modeled in means other than the tabular relations used in relational
-databases
+<LI>A NoSQL (often interpreted as Not only SQL) database 
+<FONT COLOR="#0000ff"> provides a mechanism for storage and retrieval of data that is modeled in means other than the tabular relations used in relational
+databases</FONT>
 </LI>
 <LI>Motivations for this approach include 
 
@@ -170,13 +171,15 @@ document) differ from those used in relational databases, making some operations
 <LI>The particular suitability of a given NoSQL database depends
 on the problem it must solve
 </LI>
-<LI>NoSQL databases are increasingly used in big data and real-time web applications 
+<LI>NoSQL databases are increasingly used in 
+<FONT COLOR="#ff0000"> big data</FONT> and 
+<FONT COLOR="#ff0000"> real-time web applications</FONT>
 </LI>
 <LI>NoSQL systems are also called "Not only SQL" to emphasize that they may also support SQL-like query languages
 </LI>
 <LI>Many
 NoSQL stores compromise consistency (in the sense of the CAP<A NAME="tex2html421"
-  HREF="footnode.html#foot11721"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
+  HREF="footnode.html#foot11724"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
 </LI>
 </UL>
 
@@ -212,7 +215,7 @@ for searching and defines indexes on them.
 <LI>A key concept in the relational
 design is that any data that may be repeated is placed in its own table,
 and if these instances are related to each other, a field is selected
-to group them together, the <A NAME="11871"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
+to group them together, the <A NAME="11880"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
 
 <P>
 </LI>
@@ -232,15 +235,15 @@ while the <code>PHONE_NUMBER</code> table might include <code>COUNTRY_CODE</code
 <P>
 </LI>
 <LI>The <code>PHONE_NUMBER</code> table also
-contains a <A NAME="11873"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
+contains a <A NAME="11882"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
 number assigned to the contact when it was created. 
 
 <P>
 </LI>
 <LI>In order to recreate
 the original contact, the system has to search through all of the tables
-and collect the information back together using <A NAME="11875"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
-  HREF="footnode.html#foot11691"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">2</SPAN></SUP></A>
+and collect the information back together using <A NAME="11884"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
+  HREF="footnode.html#foot11694"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">2</SPAN></SUP></A>
 </LI>
 </UL>
 
