--- a/node100.html
+++ b/node100.html
@@ -179,7 +179,7 @@ on the problem it must solve
 </LI>
 <LI>Many
 NoSQL stores compromise consistency (in the sense of the CAP<A NAME="tex2html421"
-  HREF="footnode.html#foot11724"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
+  HREF="footnode.html#foot11726"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
 </LI>
 </UL>
 
@@ -215,7 +215,7 @@ for searching and defines indexes on them.
 <LI>A key concept in the relational
 design is that any data that may be repeated is placed in its own table,
 and if these instances are related to each other, a field is selected
-to group them together, the <A NAME="11880"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
+to group them together, the <A NAME="11882"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
 
 <P>
 </LI>
@@ -235,14 +235,14 @@ while the <code>PHONE_NUMBER</code> table might include <code>COUNTRY_CODE</code
 <P>
 </LI>
 <LI>The <code>PHONE_NUMBER</code> table also
-contains a <A NAME="11882"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
+contains a <A NAME="11884"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
 number assigned to the contact when it was created. 
 
 <P>
 </LI>
 <LI>In order to recreate
 the original contact, the system has to search through all of the tables
-and collect the information back together using <A NAME="11884"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
+and collect the information back together using <A NAME="11886"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
   HREF="footnode.html#foot11694"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">2</SPAN></SUP></A>
 </LI>
 </UL>
@@ -442,6 +442,18 @@ At any point, you can access help for the mongo shell using
         it                           result of the last line evaluated; use to further iterate
         DBQuery.shellBatchSize = x   set default number of items to display on shell
         exit                         quit the mongo shell
+</PRE>
+
+<P>
+Furthermore, you can append the <code>.help()</code> 
+method to some JavaScript methods, any cursor object,
+as well as the <code>db</code> and <code>db.collection</code> objects to return additional help information.
+<PRE>
+&gt; db.help()
+DB methods:
+        db.addUser(userDocument)
+        db.auth(username, password)
+        ...
 </PRE>
 
 <P>
