--- a/node96.html
+++ b/node96.html
@@ -204,7 +204,10 @@ James carr blog and updated 2015:
   HREF="node100.html#SECTION06243000000000000000">Create a Collection and Insert Documents</A>
 <LI><A NAME="tex2html2777"
   HREF="node100.html#SECTION06244000000000000000">Insert Documents using a For Loop or a JavaScript Function</A>
-</UL></UL>
+<UL>
+<LI><A NAME="tex2html2778"
+  HREF="node100.html#SECTION06244010000000000000">Insert Multiple Documents Using a For Loop</A>
+</UL></UL></UL>
 <!--End of Table of Child-Links-->
 
 <DIV CLASS="navigation"><HR>
