--- a/node102.html
+++ b/node102.html
@@ -184,6 +184,59 @@ Post = new mongoose.Schema(
 
 module.exports = mongoose.model 'Post', Post
 </PRE>
+Si ejecutamos las pruebas obtenemos un fallo porque el servidor <code>mongod</code> no está arrancado:
+<PRE>
+$ gulp test
+[11:34:22] Using gulpfile ~/local/src/javascript/expressjs/clase-express-coffee/gulpfile.js
+[11:34:22] Starting 'mocha'...
+
+  Post
+    1) "before all" hook
+
+  routes
+    index
+      ok: should display index with posts
+    new post
+      ok: should display the add post page
+
+  2 passing (2s)
+  1 failing
+
+  1) Post "before all" hook:
+     Error: timeout of 2000ms exceeded. Ensure the done() callback is being called in this test.
+</PRE>
+Será mejor automatizar el proceso de ejecutar las pruebas 
+un poco. Para ello reescribimos nuestro <code>Gulpfile</code>
+para que arranque el servidor <code>mongod</code> antes de las pruebas
+y lo cierre al finalizar las pruebas:
+<PRE>
+[~/javascript/expressjs/clase-express-coffee(preparapl20042015)]$ cat gulpfile.coffee 
+gulp = require('gulp')
+shell = require('gulp-shell')
+fs = require('fs')
+
+# run coffee server via nodemon https://github.com/remy/nodemon
+gulp.task 'default', -&gt;
+  gulp.src('').pipe shell( 'DEBUG=coffeepress:* nodemon bin/www.coffee' )
+
+gulp.task 'test', [ 'killmongo' ]
+
+gulp.task 'mocha', [ 'mongod' ], -&gt;
+  gulp.src('')
+    .pipe shell "mocha --compilers coffee:coffee-script/register --invert --grep 'feature' -R spec"
+
+# run mongod server
+gulp.task 'mongod', -&gt;
+  gulp.src('')
+    .pipe shell([ 'mongod --pidfilepath /tmp/mongo.pid --logpath /tmp/mongo.log &amp;' ])
+
+# kill mongod server
+gulp.task 'killmongo', [ "mocha" ],  -&gt;
+  fs.readFile '/tmp/mongo.pid', 'utf8', (err, pid) -&gt;
+    return console.log(err) if (err)
+    console.log("killing #{pid}")
+    gulp.src('').pipe shell("kill #{pid}")
+</PRE>
 
 <P>
 
