--- a/node102.html
+++ b/node102.html
@@ -237,6 +237,9 @@ gulp.task 'killmongo', [ "mocha" ],  -&gt;
     console.log("killing #{pid}")
     gulp.src('').pipe shell("kill #{pid}")
 </PRE>
+Ahora podemos ejecutar las pruebas:
+<PRE>
+</PRE>
 
 <P>
 
