--- a/node100.html
+++ b/node100.html
@@ -189,7 +189,7 @@ on the problem it must solve
 </LI>
 <LI>Many
 NoSQL stores compromise consistency (in the sense of the CAP<A NAME="tex2html421"
-  HREF="footnode.html#foot11767"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
+  HREF="footnode.html#foot11773"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A> theorem) in favor of availability and partition tolerance.
 </LI>
 </UL>
 
@@ -225,7 +225,7 @@ for searching and defines indexes on them.
 <LI>A key concept in the relational
 design is that any data that may be repeated is placed in its own table,
 and if these instances are related to each other, a field is selected
-to group them together, the <A NAME="11923"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
+to group them together, the <A NAME="11929"></A><SPAN  CLASS="textbf">foreign key</SPAN>.
 
 <P>
 </LI>
@@ -245,14 +245,14 @@ while the <code>PHONE_NUMBER</code> table might include <code>COUNTRY_CODE</code
 <P>
 </LI>
 <LI>The <code>PHONE_NUMBER</code> table also
-contains a <A NAME="11925"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
+contains a <A NAME="11931"></A><SPAN  CLASS="textbf">foreign key</SPAN> field, "<code>CONTACT_ID</code>", which holds the unique <code>ID</code>
 number assigned to the contact when it was created. 
 
 <P>
 </LI>
 <LI>In order to recreate
 the original contact, the system has to search through all of the tables
-and collect the information back together using <A NAME="11927"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
+and collect the information back together using <A NAME="11933"></A><SPAN  CLASS="textbf">joins</SPAN><A NAME="tex2html422"
   HREF="footnode.html#foot11694"><SUP><SPAN CLASS="arabic">15</SPAN>.<SPAN CLASS="arabic">2</SPAN></SUP></A>
 </LI>
 </UL>
@@ -384,6 +384,24 @@ on the localhost interface.
 To connect to a server on a different port
 or interface, use the <code>--port</code> and
 <code>--host</code> options.
+
+<P>
+Podemos también usar un fichero de configuración:
+<PRE>
+[~/javascript/expressjs/coffee-mongo(master)]$ cat /usr/local/etc/mongod.conf
+# Store data in /usr/local/var/mongodb instead of the default /data/db
+dbpath = /usr/local/var/mongodb
+
+# Append logs to /usr/local/var/log/mongodb/mongo.log
+logpath = /usr/local/var/log/mongodb/mongo.log
+logappend = true
+</PRE>
+
+<P>
+y ejecutarlo con la opción <code>--config</code>:
+<PRE>
+$ mongod --config /usr/local/etc/mongod.conf
+</PRE>
 
 <P>
 <PRE>
