--- a/node100.html
+++ b/node100.html
@@ -395,6 +395,10 @@ dbpath = /usr/local/var/mongodb
 # Append logs to /usr/local/var/log/mongodb/mongo.log
 logpath = /usr/local/var/log/mongodb/mongo.log
 logappend = true
+
+verbose = v 
+# Only accept local connections
+bind_ip = 127.0.0.1
 </PRE>
 
 <P>
