--- a/node102.html
+++ b/node102.html
@@ -224,6 +224,7 @@ gulp.task 'default', -&gt;
 
 gulp.task 'test', [ 'mocha' ]
 
+# run mocha
 gulp.task 'mocha', -&gt;
   gulp.src('')
     .pipe shell "mocha --compilers coffee:coffee-script/register --invert --grep 'feature' -R spec"
@@ -240,7 +241,7 @@ gulp.task 'killmongo', -&gt;
       console.log("killing #{pid}")
       gulp.src('').pipe shell("kill #{pid}")
 
-# run mongod server
+# show mongod PID
 gulp.task 'ps', -&gt;
   gulp.src('')
     .pipe shell( 'ps -fA | grep mongod')
