--- a/node101.html
+++ b/node101.html
@@ -182,8 +182,8 @@ var kittySchema = mongoose.Schema({
 Everything in Mongoose starts with a 
 <A NAME="tex2html426"
   HREF="http://mongoosejs.com/docs/guide.html">Schema</A>. 
-Each schema maps to a <A NAME="11992"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
-<FONT COLOR="#ff0000"> defines the shape of the <A NAME="11997"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
+Each schema maps to a <A NAME="11996"></A><SPAN  CLASS="textbf">MongoDB</SPAN> collection and 
+<FONT COLOR="#ff0000"> defines the shape of the <A NAME="12001"></A><SPAN  CLASS="textbf">MongoDB documents</SPAN> within that collection</FONT>.
 
 <P>
 So far so good. 
@@ -229,6 +229,30 @@ var Kitten = mongoose.model('Kitten', kittySchema)
 </PRE>
 Functions added to the methods property of a schema get compiled into
 the Model prototype and exposed on each document instance:
+<PRE>
+var fluffy = new Kitten({ name: 'fluffy' });
+fluffy.speak()
+</PRE>
+
+<P>
+We have talking kittens! But we still haven't saved anything to
+MongoDB. 
+
+<P>
+Each document can be saved to the database by calling its
+<code>save</code> method. 
+
+<P>
+The first argument to the callback will be an error if
+any occured.
+
+<P>
+<PRE>
+fluffy.save(function (err, fluffy) {
+  if (err) return console.error(err);
+  fluffy.speak();
+});
+</PRE>
 
 <P>
 
