--- a/node32.html
+++ b/node32.html
@@ -398,15 +398,8 @@ b='world'
   [ 'hello', 'world' ]
 </PRE>
 </LI>
-<LI>if
-set to 
+<LI>if set to 
 <FONT COLOR="#0000ff"> source</FONT>, it will return parser source code as a string 
-</LI>
-<LI>(default: <code>parser</code>).
-</LI>
-</UL>
-
-<P>
 <PRE>
 &gt; parser = PEG.buildParser(grammar,{ output: "source"})
 &gt; typeof parser
@@ -419,6 +412,10 @@ set to
    * http://pegjs.majda.cz/
    */
 </PRE>
+</LI>
+<LI>(default: <code>parser</code>).
+</LI>
+</UL>
 
 <P>
 
